# automatos

./: .gitignore
servos/: CMakeLists.txt  servos.cpp  servosLib.cpp  servosLib.hpp
simArm/: CMakeLists.txt  actuator.cpp  actuator.hpp  arm3d.qml  main.cpp  main.qml  qml.qrc
